# -*- eval: (cargo-minor-mode 1) -*-

[package]
workspace = ".."
name = "lottie2gif"
version = "0.2.0"
license = "MIT"
include = ["src/**/*.rs", "/LICENSE"]

description = "Convert lottie files to GIF"
repository = "https://github.com/msrd0/rlottie-rs"

edition = "2021"
rust-version = "1.56"
autobins = false

[[bin]]
name = "lottie2gif"
required-features = ["clap"]

[dependencies]
clap = { version = "3.0", features = ["derive"], optional = true }
gif = "0.11.3"
rlottie = { path = "../rlottie", version = "0.2" }
