# -*- eval: (cargo-minor-mode 1) -*-

[package]
workspace = ".."
name = "lottie2gif"
version = "0.3.1"
license = "MIT"
include = ["src/**/*.rs", "/LICENSE"]

description = "Convert lottie files to GIF"
repository = "https://github.com/msrd0/rlottie-rs"

edition = "2021"
rust-version = "1.56"
autobins = false

[[bin]]
name = "lottie2gif"
required-features = ["clap"]

[dependencies]
clap = { version = "3.0", features = ["derive"], optional = true }
gif = "0.11.3"
rgb = { version = "0.8.32", default-features = false }
rlottie = { path = "../rlottie", version = "0.3.0" }
