# -*- eval: (cargo-minor-mode 1) -*-

[package]
workspace = ".."
name = "lottie2gif"
version = "0.4.1"
license = "MIT"
include = ["src/**/*.rs", "/LICENSE"]

description = "DEPRECATED - use lottieconv crate instead"
repository = "https://github.com/msrd0/rlottie-rs"
documentation = "https://docs.msrd0.de/lottie2gif/0.4.1/lottie2gif/"

edition = "2021"
rust-version = "1.56"
autobins = false

[[bin]]
name = "lottie2gif"
required-features = ["clap"]

[dependencies]
clap = { version = "3.0", features = ["derive"], optional = true }
gif = "0.11.3"
rgb = { version = "0.8.32", default-features = false }
rlottie = { path = "../rlottie", version = "0.4.1" }
