# -*- eval: (cargo-minor-mode 1) -*-

[package]
workspace = ".."
name = "lottie2webp"
version = "0.2.0"
license = "MIT"
include = ["src/**/*.rs", "/LICENSE"]

description = "Convert lottie files to WEBP"
repository = "https://github.com/msrd0/rlottie-rs"
documentation = "https://docs.msrd0.de/lottie2webp/0.2.0/lottie2webp/"

edition = "2021"
rust-version = "1.56"
autobins = false

[[bin]]
name = "lottie2webp"
required-features = ["clap"]

[dependencies]
clap = { version = "3.0", features = ["derive"], optional = true }
rgb = { version = "0.8.32", default-features = false }
rlottie = { path = "../rlottie", version = "0.4" }
webp-animation = "0.5"
