# -*- eval: (cargo-minor-mode 1) -*-

[package]
workspace = ".."
name = "lottieconv"
version = "0.2.1"
license = "MIT"
include = ["src/**/*.rs", "bin/*.rs", "/LICENSE", "/README.md"]

description = "Convert lottie files to WEBP or GIF"
keywords = ["lottie", "webp", "gif", "convert"]
repository = "https://github.com/msrd0/rlottie-rs"
documentation = "https://docs.msrd0.de/lottieconv/0.2.1/lottieconv/"

edition = "2021"
rust-version = "1.56"
autobins = false

[[bin]]
name = "lottie2gif"
path = "bin/lottie2gif.rs"
required-features = ["clap", "gif"]

[[bin]]
name = "lottie2webp"
path = "bin/lottie2webp.rs"
required-features = ["clap", "webp"]

[features]
default = ["gif", "webp"]
gif = ["gif_crate"]
webp = ["webp-animation"]

[dependencies]
clap = { version = "4.0", features = ["derive"], optional = true }
gif_crate = { package = "gif", version = "0.11.3", optional = true }
rgb = { version = "0.8.32", default-features = false }
rlottie = { path = "../rlottie", version = "0.5" }
webp-animation = { version = "0.7", optional = true }
