# -*- eval: (cargo-minor-mode 1) -*-

[package]
workspace = ".."
name = "lottieconv"
version = "0.2.3"
license = "MIT"
include = ["src/**/*.rs", "bin/*.rs", "/LICENSE", "/README.md"]

description = "Convert lottie files to WEBP or GIF"
keywords = ["lottie", "webp", "gif", "convert"]
repository = "https://github.com/msrd0/rlottie-rs"

edition = "2021"
rust-version = "1.60"
autobins = false

[[bin]]
name = "lottie2gif"
path = "bin/lottie2gif.rs"
required-features = ["clap", "gif"]

[[bin]]
name = "lottie2webp"
path = "bin/lottie2webp.rs"
required-features = ["clap", "webp"]

[features]
default = ["gif", "webp"]
gif = ["dep:gif_crate"]
serde = ["rgb/serde", "rlottie/serde"]
webp = ["dep:webp-animation"]

[dependencies]
clap = { version = "4.0", features = ["derive"], optional = true }
gif_crate = { package = "gif", version = "0.12", optional = true }
rgb = { version = "0.8.32", default-features = false }
rlottie = { path = "../rlottie", version = "0.5.2" }
webp-animation = { version = "0.9", optional = true }
