# -*- eval: (cargo-minor-mode 1) -*-

[package]
workspace = ".."
name = "rlottie-sys"
version = "0.2.10"
description = "A platform independent standalone library that plays Lottie Animation"
include = ["src/**/*.rs", "/build.rs", "/wrapper.h", "/LICENSE"]

license.workspace = true
repository.workspace = true

edition = "2021"
rust-version = "1.64" # bump version in build.rs as well
links = "rlottie"

[build-dependencies]
bindgen = { version = "0.71", features = ["prettyplease", "runtime"], default-features = false }
pkg-config = "0.3.22"
