# -*- eval: (cargo-minor-mode 1) -*-

[package]
workspace = ".."
name = "rlottie"
version = "0.5.2" # update doc url as well!
license = "MIT"
include = ["build.rs", "src/**/*.rs", "/LICENSE"]

description = "A platform independent standalone library that plays Lottie Animation"
repository = "https://github.com/msrd0/rlottie-rs"
documentation = "https://docs.msrd0.de/rlottie/0.5.2/rlottie/"

edition = "2021"
rust-version = "1.60"

[features]
serde = ["dep:serde", "rgb/serde"]

[dependencies]
rgb = { version = "0.8.32", default-features = false, features = ["argb"] }
rlottie-sys = { path = "../rlottie-sys", version = "0.2" }
serde = { version = "1", features = ["derive"], optional = true }
