# -*- eval: (cargo-minor-mode 1) -*-

[package]
workspace = ".."
name = "rlottie"
version = "0.5.2"
description = "A platform independent standalone library that plays Lottie Animation"
include = ["build.rs", "src/**/*.rs", "/LICENSE"]

license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
serde = ["dep:serde", "rgb/serde"]

[dependencies]
rgb = { version = "0.8.32", default-features = false }
rlottie-sys = { path = "../rlottie-sys", version = "0.2" }
serde = { version = "1", features = ["derive"], optional = true }
